--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,19 @@
-{
+ {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "urls": "http://*.11111",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*.11111"
+      }
+    }
   }
+
 }
+
