--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "urls": "http://*.11111",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*.11111"
+      }
+    }
+  }
+
 }
